[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lincoln"
version = "0.0.1"
authors = [
  { name="Seth Weidman" },
]
description = "A Deep Learning library by the people, for the people."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "torch"
]

[project.urls]
"Homepage" = "https://github.com/SethHWeidman/DLFS_code/tree/master/lincoln"
"Bug Tracker" = "https://github.com/SethHWeidman/DLFS_code/issues"
